# prism

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/img/: README.md
include/: .gitignore  prism.h  prism_common.h  prism_timer.h  prism_world.h  prism_world_config.h
include/algorithm/: prism_gjk.h
include/allocators/: prism_allocator.h  prism_allocator_utils.h  prism_base_allocator.h  prism_frame_allocator.h  prism_linear_allocator.h  prism_pool_allocator.h
include/body/: prism_body.h  prism_island.h  prism_material.h
include/collision/: prism_aabb.h  prism_ray.h
include/collision/broadphase/: prism_dynamic_aabb_tree.h
include/constraints/: prism_ball_and_socket_joint.h  prism_base_joint.h  prism_contact_constraint.h  prism_fixed_joint.h  prism_joint.h
include/math/: prism_mat33.h  prism_math.h  prism_quaternion.h  prism_transform.h  prism_vec3f.h  quaternion.h
include/shapes/: prism_base_shape.h  prism_box.h  prism_capsule.h  prism_convex_hull_shape.h  prism_shapes.h  prism_sphere.h  prism_triangle.h
src/: prism_aabb.c  prism_allocator.c  prism_allocator_utils.c  prism_ball_and_socket_joint.c  prism_body.c  prism_box.c  prism_capsule.c  prism_convex_hull_shape.h  prism_dynamic_aabb_tree.c  prism_fixed_joint.c  prism_frame_allocator.c  prism_gjk.c  prism_island.c  prism_mat33.c  prism_pool_allocator.c  prism_quaternion.c  prism_ray.c  prism_sphere.c  prism_timer.c  prism_triangle.c  prism_vec3f.c  prism_world.c  prism_world_config.c
